<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu_home"
        android:id="@+id/home"
        android:icon="@drawable/ic_selected_menu_home"
    />

    <item
        android:title="@string/menu_catalog"
        android:id="@+id/catalog"
        android:icon="@drawable/ic_catalog_line_gray"
        />
    <item
        android:title="@string/menu_product"
        android:id="@+id/product"
        android:icon="@drawable/ic_selected_menu_product"
    />
    <item
        android:title="@string/menu_category"
        android:id="@+id/category"
        android:icon="@drawable/ic_selected_menu_category"
    />
    <item
        android:title="@string/menu_user"
        android:id="@+id/user"
        android:icon="@drawable/ic_selected_menu_user"
    />
</menu>